--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dev.finance$</title>
 
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400&display=swap" rel="stylesheet">
   </head>
@@ -23,7 +23,7 @@
         <div class="card">
           <h3>
             <span>Entradas</span>
-            <img class="images" src="./Images/money.png" alt="img de entrada">
+            <img class="images" src="/Images/money.png" alt="img de entrada">
           </h3>
           <p id="incomeDisplay">R$ 0,00</p>
         </div>
@@ -31,7 +31,7 @@
         <div class="card">
           <h3>
             <span>Saidas</span>
-            <img class="images" src="./Images/expense.png" alt="img de saida">
+            <img class="images" src="/Images/expense.png" alt="img de saida">
           </h3>
           <p id="expenseDisplay">R$ 0,00</p>
         </div>
@@ -39,7 +39,7 @@
         <div class="card total">
           <h3>
             <span>Total</span>
-            <img class="images" src="./Images/normal.cur" alt="img de total">
+            <img class="images" src="/Images/normal.cur" alt="img de total">
           </h3>
           <p id="totalDisplay">R$ 0,00</p>
         </div>
@@ -128,7 +128,7 @@
       <p>dev.finance$</p>
     </footer>
 
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
   </body>
 
 </html>
