--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ footer {
         <div class="card">
           <h3>
             <span>Entradas</span>
-            <img class="images" src="/Images/money.png" alt="img de entrada">
+            <img class="images" src="./Images/money.png" alt="img de entrada">
           </h3>
           <p id="incomeDisplay">R$ 0,00</p>
         </div>
@@ -361,7 +361,7 @@ footer {
         <div class="card">
           <h3>
             <span>Saidas</span>
-            <img class="images" src="/Images/expense.png" alt="img de saida">
+            <img class="images" src="./Images/expense.png" alt="img de saida">
           </h3>
           <p id="expenseDisplay">R$ 0,00</p>
         </div>
@@ -369,7 +369,7 @@ footer {
         <div class="card total">
           <h3>
             <span>Total</span>
-            <img class="images" src="/Images/normal.cur" alt="img de total">
+            <img class="images" src="./Images/normal.cur" alt="img de total">
           </h3>
           <p id="totalDisplay">R$ 0,00</p>
         </div>
