--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ footer {
         <div class="card">
           <h3>
             <span>Entradas</span>
-            <img class="images" src="./Images/money.png" alt="img de entrada">
+            <img class="images" src="Images/money.png" alt="img de entrada">
           </h3>
           <p id="incomeDisplay">R$ 0,00</p>
         </div>
