--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ button.cancel:hover {
         <!-- <button class="b1" onclick="saveButton()">SALVAR DADOS</button> -->
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     
 </body>
 
