--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ button.cancel:hover {
         <!-- <button class="b1" onclick="saveButton()">SALVAR DADOS</button> -->
     </footer>
 
-    <script src="script.js">
+    <script>
         // criar objeto para inserir os dados do transactions no HTML pelo JS
 const DOM = {
     transactionsContainer: document.querySelector('#data-table tbody'),
